--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --watch",
+    "build": "tsc",
     "start": "node dist",
-    "dev": "npm run build & npm run start"
+    "dev": "nodemon",
+    "launch": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mysql2": "^3.11.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.2",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2"
   }
 }
