--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,6 @@ API_DATABASE_HOST=
 API_DATABASE_PORT=
 API_DATABASE_USER=
 API_DATABASE_PASSWORD=
-API_DATABASE_NAME
+API_DATABASE_NAME=
 API_PORT=
 API_TOKEN_SECRET_KEY=
